k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
    spec: 
      containers:
      - image: CONTAINER_IMAGE
        name: myapp
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  ports:
  - port: 80 #service port  #kubeproxy will open port on worker node to which can route traffic to alb
    targetPort: 5000 #container port
    protocol: TCP
  type: ClusterIP
  selector:
    app: myapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  annotations:
    # Ingress class to use the NGINX Ingress Controller
    kubernetes.io/ingress.class: "nginx"
    # AWS-specific annotations for SSL and the load balancer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nlb.ingress.kubernetes.io/scheme: internet-facing
    nlb.ingress.kubernetes.io/target-type: instance
    nlb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    nlb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:434605749312:certificate/688e0f25-4d77-43f7-a0f5-1f59d7a20095"
spec:

  rules:
    - host: photoapp.codedevops.cloud
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: myapp
                port:
                  number: 80   
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 80
